working in a resumable way

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,9 @@ services:
     volumes:
       - ./images:/images
       - ./output:/output
+      - ./models:/models
+    environment:
+      HF_HOME: /models
     deploy:
       resources:
         reservations:
