--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-autotrain-advanced
-flash-attn
-deepspeed
+git+https://github.com/huggingface/transformers.git@v4.37.2
+git+https://github.com/huggingface/accelerate.git@v0.26.1
+xformers
+bitsandbytes
+hf_transfer
