--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,13 @@ services:
       - ./output:/output
       - ./models:/models
     environment:
-      HF_HOME: /models
+      - HF_HOME=/models
+      - AWS_DEFAULT_REGION
+      - AWS_ACCESS_KEY_ID
+      - AWS_SECRET_ACCESS_KEY
+      - AWS_ENDPOINT_URL
+      - BUCKET_NAME=training-checkpoints
+      - BUCKET_PREFIX=loras/timber/
     deploy:
       resources:
         reservations:
