basic s3-backed checkpointing is working

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - AWS_ENDPOINT_URL
       - BUCKET_NAME=training-checkpoints
       - BUCKET_PREFIX=loras/timber/
+      - PYTHONUNBUFFERED=1
     deploy:
       resources:
         reservations:
